Added Project Notebook

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -15,8 +15,14 @@
     "* Dhruba Dutta Banik, 1st Year, CSE (IoT)\n",
     "* Disha Laskar, 1st Year, CST\n",
     "* Arkapravo Ghosh, 1st Year, CSE (IoT)\n",
-    "* Mahak Gupta, 2nd Year, CST\n",
-    "\n",
+    "* Mahak Gupta, 2nd Year, CST"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Hardware\n",
     "<details>\n",
     "    <summary>Using Arduino Uno and A Linux Server</summary>\n",
@@ -56,8 +62,14 @@
     "* Connect GPIO 22 (Pin 15) of Raspberry Pi to OUT Pin of the IR Sensor at Parking Slot 1\n",
     "* Similarly, connect GPIO 23 (Pin 16) of Raspberry Pi to OUT Pin of the IR Sensor at Parking Slot 2\n",
     "\n",
-    "</details>\n",
-    "\n",
+    "</details>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Software\n",
     "<details>\n",
     "    <summary>Linux Server</summary>\n",
@@ -132,7 +144,7 @@
     "`cd ./src/client`\\\n",
     "`./main.py`\n",
     "\n",
-    "</details>\n"
+    "</details>"
    ]
   }
  ],
