--- a/Project.ipynb
+++ b/Project.ipynb
@@ -39,7 +39,7 @@
     "Upload the [Source Code](src/arduino/main/main.ino) to Arduino Uno Board, then create the circuit as shown below:\n",
     "<p align=\"center\"><a><img height=\"500\" src=\"https://raw.githubusercontent.com/Arkapravo-Ghosh/img/main/circuit_diagram.png\"></a>&nbsp;&nbsp;</p>\n",
     "\n",
-    "> This circuit will read the data from the IR sensors and send it to the Raspberry Pi via Serial Monitor.\n",
+    "> This circuit will read the data from the IR sensors and send it to the Linux Server via Serial Monitor.\n",
     "\n",
     "</details>\n",
     "\n",
