Added Ureckon Logo

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -9,7 +9,14 @@
     "![](https://img.shields.io/badge/license-MIT-blue)\n",
     "![](https://img.shields.io/badge/languages-arduino%2C%20raspberrypi%2C%20python%2C%20sql%2C%20linux-blue)\n",
     "\n",
+    "</div>\n",
+    "<div align=center>\n",
+    "<img height=\"150\" src=\"https://raw.githubusercontent.com/Arkapravo-Ghosh/img/main/ureckon-logo.jpg\"></img>\n",
+    "</div>\n",
+    "\n",
     "### Project Name: Smart Parking System\n",
+    "<div align=left>\n",
+    "\n",
     "### Made by:\n",
     "* Sankalpa Dutta, 1st Year, CSE (IoT)\n",
     "* Dhruba Dutta Banik, 1st Year, CSE (IoT)\n",
