--- a/Project.ipynb
+++ b/Project.ipynb
@@ -8,20 +8,21 @@
     "# Project for Ureckon Innovation Challenge 2023\n",
     "![](https://img.shields.io/badge/license-MIT-blue)\n",
     "![](https://img.shields.io/badge/languages-arduino%2C%20raspberrypi%2C%20python%2C%20sql%2C%20linux-blue)\n",
-    "\n",
+    "<!--\n",
     "</div>\n",
     "<div align=center>\n",
     "<img height=\"150\" src=\"https://raw.githubusercontent.com/Arkapravo-Ghosh/img/main/ureckon-logo.jpg\"></img>\n",
     "</div>\n",
-    "\n",
+    "-->\n",
     "### Project Name: Smart Parking System\n",
-    "\n",
+    "<!--\n",
     "### Made by:\n",
     "* Sankalpa Dutta, 1st Year, CSE (IoT)\n",
     "* Dhruba Dutta Banik, 1st Year, CSE (IoT)\n",
     "* Disha Laskar, 1st Year, CST\n",
     "* Arkapravo Ghosh, 1st Year, CSE (IoT)\n",
-    "* Mahak Gupta, 2nd Year, CST"
+    "* Mahak Gupta, 2nd Year, CST\n",
+    "-->"
    ]
   },
   {
