Fixed Project Name

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project for Ureckon Innovation Challenge 2023\n",
+    "# Smart Parking System\n",
     "![](https://img.shields.io/badge/license-MIT-blue)\n",
     "![](https://img.shields.io/badge/languages-arduino%2C%20raspberrypi%2C%20python%2C%20sql%2C%20linux-blue)\n",
     "<!--\n",
@@ -13,7 +13,7 @@
     "<div align=center>\n",
     "<img height=\"150\" src=\"https://raw.githubusercontent.com/Arkapravo-Ghosh/img/main/ureckon-logo.jpg\"></img>\n",
     "</div>\n",
-    "-->\n",
+    "\n",
     "### Project Name: Smart Parking System\n",
     "<!--\n",
     "### Made by:\n",
