--- a/Project.ipynb
+++ b/Project.ipynb
@@ -69,6 +69,10 @@
     "* Connect GPIO 22 (Pin 15) of Raspberry Pi to OUT Pin of the IR Sensor at Parking Slot 1\n",
     "* Similarly, connect GPIO 23 (Pin 16) of Raspberry Pi to OUT Pin of the IR Sensor at Parking Slot 2\n",
     "\n",
+    "</div>\n",
+    "<div align=center>\n",
+    "<img height=\"600\" src=\"https://raw.githubusercontent.com/Arkapravo-Ghosh/img/main/smart-parking-system/smart-parking-system.jpg\"></img>\n",
+    "</div>\n",
     "</details>"
    ]
   },
